continue package cleanup

--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,6 +1,6 @@
 
-packages: bits/minimal bits/base
-	cat bits/minimal bits/base | sort -u > packages
+packages: $(wildcard bits/*)
+	cat bits/minimal bits/base bits/more bits/gui bits/xfce bits/cernvm | sort -u > packages
 
 clean:
 	rm -f packages
