--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,7 +1,6 @@
 
 packages: $(wildcard bits/*)
-	cat bits/minimal bits/base bits/more bits/debug bits/perl bits/mono \
-	  bits/gui bits/xfce bits/cernvm bits/i686-extra | sort -u > packages
+	cat bits/aarch64 | sort -u > packages
 
 clean:
 	rm -f packages
