Start porting cernvm-rpm to aarch64

--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,6 +1,7 @@
 
 packages: $(wildcard bits/*)
-	cat bits/minimal bits/base bits/more bits/debug bits/perl bits/gui bits/xfce bits/cernvm bits/i686-extra | sort -u > packages
+	#cat bits/minimal bits/base | sort -u > packages
+	cat bits/aarch64 | sort -u > packages
 
 clean:
 	rm -f packages
