--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,7 +1,6 @@
 
 packages: $(wildcard bits/*)
-	#cat bits/minimal bits/base | sort -u > packages
-	cat bits/aarch64 | sort -u > packages
+	cat bits/minimal bits/base.aarch64 bits/cernvm.aarch64 | sort -u > packages
 
 clean:
 	rm -f packages
