Start porting to aarch64

--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,6 +1,6 @@
 
 packages: $(wildcard bits/*)
-	cat bits/minimal bits/base.aarch64 bits/cernvm.aarch64 | sort -u > packages
+	cat bits/minimal bits/base.aarch64 bits/cernvm.aarch64 bits/python.aarch64 bits/more.aarch64 | sort -u > packages
 
 clean:
 	rm -f packages
