--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,7 +1,7 @@
 
 packages: $(wildcard bits/*)
 	cat bits/minimal bits/base bits/more bits/debug bits/perl bits/mono \
-	  bits/gui bits/xfce bits/cernvm bits/i686-extra | sort -u > packages
+	  bits/nodejs bits/gui bits/xfce bits/cernvm bits/i686-extra | sort -u > packages
 
 clean:
 	rm -f packages
