--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,6 +1,6 @@
 
 packages: $(wildcard bits/*)
-	cat bits/minimal bits/base bits/more bits/debug bits/perl bits/mono \
+	cat bits/minimal bits/base bits/more bits/head bits/debug bits/perl bits/mono \
 	  bits/nodejs bits/gui bits/xfce bits/cernvm bits/i686-extra | sort -u > packages
 
 clean:
